# proxies

./: CMakeLists.txt  install.sh  uninstall.sh
.github/workflows/: docker.yaml
confs/: .gitignore  test-confs.sh
confs/darwin/service/: com.codesgeeking.proxies.plist  start.sh  stop.sh
confs/linux/: config-example.json
confs/linux/service/: proxies  proxies.service  start.sh  stop.sh
confs/openwrt/service/: proxies  start.sh  stop.sh
docker/: Dockerfile  ld.so.conf
src/: main.cpp
src/core/: Common.h  Config.cpp  Config.h  ProxyServer.cpp  ProxyServer.h  Session.cpp  Session.h  SessionManager.cpp  SessionManager.h  StreamTunnel.cpp  StreamTunnel.h  TCPSession.cpp  TCPSession.h  TCPSessionManager.cpp  TCPSessionManager.h  Utils.cpp  Utils.h
